Make family tree node non-selectable. This prevent trouble on mobile devices.

--- a/src/components/familyTree/CharacterFamilyTree.scss
+++ b/src/components/familyTree/CharacterFamilyTree.scss
@@ -16,6 +16,9 @@
         justify-content: center;
         transition: 200ms;
         cursor: pointer;
+        user-select: none;
+        -moz-user-select: none;
+        -webkit-user-select: none;
 
         &.male {
             background: #ddf1ff;
